The Forgetable file

--- a/index.htm
+++ b/index.htm
@@ -54,34 +54,20 @@
                        <p style="text-align: center;"><button class="btn btn-danger align-content-center" style="border-radius: 45px;"> Download CV</button></p>
                     </div>
                     <div class="col-md-4"></div>
-                </div>
+                </div
               </div>
           </div>
           <div class="row pt-5">
-              <div class="col-md-4 col-sm-8 mt-3">
-                  <div class="card" style="border-radius: 0px; background-color: rgb(41, 43, 63)">
+              <div class="col-md-4"></div>
+              <div class="col-md-4">
+                  <div class="card" style="border-radius: 10px; background-color:rgb(10, 84, 128)">
                       <div class="card-body">
-                          <h5 class="card-title the-card" style="color: #fff">Android Apps</h5>
-                          <p class="card-text" style="color:rgb(161, 160, 160)">12 Projects</p>
+                          <h5 class="card-title" style="color: white; text-align:center; font-family: roboto;">Project Finished</h5>
+                          <p class="card-text" style="text-align: center; color: rgb(175, 175, 175)">Andorid 2 | Web 12 | UI Design 23 Projects</p>
                       </div>
                   </div>
               </div>
-              <div class="col-md-4 col-sm-8 mt-3">
-                <div class="card" style="border-radius: 0px; background-color: rgb(41, 43, 63); cursor: pointer">
-                    <div class="card-body">
-                        <h5 class="card-title the-card">Websites</h5>
-                        <p class="card-text" style="color: rgb(161, 160, 160)">04 Running Web Apps</p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-sm-8 mt-3">
-                <div class="card" style="border-radius: 0px; background-color: rgb(41, 43, 63)">
-                    <div class="card-body">
-                        <h5 class="card-title the-card">UI / UX Design</h5>
-                        <p class="card-text" style="color: rgb(161, 160, 160)">34 Projects</p>
-                    </div>
-                </div>
-            </div>
+              <div class="col-md-4"></div>
           </div>
         </div>
     </div>
