--- a/index.htm
+++ b/index.htm
@@ -51,10 +51,10 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                       <p style="text-align: center;"><button class="btn btn-danger align-content-center" style="border-radius: 45px;"> Download CV</button></p>
+                       <p style="text-align: center;"> <a href="cv.pdf"><button class="btn btn-danger align-content-center" style="border-radius: 45px;"> Download CV</button></a> </p>
                     </div>
                     <div class="col-md-4"></div>
-                </div
+                </div>
               </div>
           </div>
           <div class="row pt-5">
