--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <link >
 </head>
 <body>
-    <div class="container-fluid fixed-top" style="background-color:  #000;">
+    <div class="container-fluid fixed-top" id="mainbackground" style="background-color:  #000;">
         <div class="container">
            <nav class="navbar navbar-expand-md navbar-dark">
                <a class="navbar-brand" href="#"><img src="assets/JohDev logo.png" height="40px" alt=""></a>
