Adding the Contents

--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <link >
 </head>
 <body>
-    <div class="container-fluid fixed-top" id="mainbackground" style="background-color:  #000;">
+    <div class="container-fluid fixed-top" id="particles" style="background-color:  #000;">
         <div class="container">
            <nav class="navbar navbar-expand-md navbar-dark">
                <a class="navbar-brand" href="#"><img src="assets/JohDev logo.png" height="40px" alt=""></a>
@@ -43,7 +43,7 @@
         </div>
     </div>
     <!--make it angain make it again (: (|))-->
-    <div class="container-fluid mt-5" style="background-color: black; height: 100vh">
+    <div id="particles" class="container-fluid mt-5" style="background-color: rgb(2, 21, 24); height: 100vh">
         <div class="container pt-xl-5">
           <div class="row">
               <div class="col-md-12 pt-5">
@@ -120,12 +120,12 @@
            <div class="row">
                <div class="col-md-4 mt-3">
                    <div class="card">
-                       <img class="card-img" src="media/kids_.png" alt="">
+                       <img class="card-img" src="media/teachme_kids.png" alt="">
                        <div class="card-img-overlay main-card">
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">TeachMe Kids (Education)</h5>
                         <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                        <button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button>
+                        <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
@@ -144,12 +144,12 @@
                </div>
                <div class="col-md-4 mt-3">
                    <div class="card">
-                       <img class="card-img" src="media/453e24ce3ffd3d65988bb8026c54281e (1).png" alt="">
+                       <img class="card-img" src="media/CoronaInfo.png" alt="">
                        <div class="card-img-overlay main-card">
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">E-commerce (Local Shop)</h5>
                         <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                        <button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button>
+                        <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
@@ -220,7 +220,7 @@
                </div>
            </form>
            <!---Social icons-->
-           <h2 style="text-align: center; font-family: 'roboto" class="mt-4 pt-5"><span style="font-weight: 200">GET IN</span> TOUCH</h2>
+           <h2 style="text-align: center; font-family: roboto" class="mt-4 pt-5"><span style="font-weight: 200">GET IN</span> TOUCH</h2>
            <div class="row p-4">
                <div class="col-md-4"></div>
                <div class="col-md-4">
@@ -247,5 +247,6 @@
     <script src="./node_modules/jquery/dist/jquery.min.js"></script>
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="Query/query.js"></script>
+    <script src="./jQuery animaiton/particleground-master/demo/js/demo.js"></script>
 </body>
 </html>
