some error fixed

--- a/index.htm
+++ b/index.htm
@@ -125,7 +125,7 @@
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">TeachMe Kids (Education)</h5>
                         <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                        <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                        <a href="https://play.google.com/store/apps/details?id=com.feedme.flutter_one"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
