--- a/index.htm
+++ b/index.htm
@@ -147,9 +147,9 @@
                        <img class="card-img" src="media/CoronaInfo.png" alt="">
                        <div class="card-img-overlay main-card">
                         <div class=" p-3">
-                        <h5 class="card-title" style="color: #fff">E-commerce (Local Shop)</h5>
-                        <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                        <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                        <h5 class="card-title" style="color: #fff">CoronaInfo Mobile Application</h5>
+                        <p class="card-text" style="color: #fff">Source Github acocunt</p>
+                        <a href="https://github.com/Josiahmpokera/Coronainfo"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
