Social Media added in the form

--- a/index.htm
+++ b/index.htm
@@ -225,10 +225,10 @@
                <div class="col-md-4"></div>
                <div class="col-md-4">
                    <div class="row" style="justify-content: space-around">
-                       <a href="#" class="icons"><img src="assets/facebook.png" alt=""></a>
-                       <a href="#" class="icons"><img src="assets/ig.png" alt=""></a>
-                       <a href="#" class="icons"><img src="assets/linkedin.png" alt=""></a>
-                       <a href="#" class="icons"><img src="assets/twitter.png" alt=""></a>
+                       <a href="https://web.facebook.com/josiah.yesayah.1" class="icons"><img src="assets/facebook.png" alt=""></a>
+                       <a href="https://www.instagram.com/josiah__yesayah/" class="icons"><img src="assets/ig.png" alt=""></a>
+                       <a href="https://www.linkedin.com/in/josiah-mpokera-3b527518b/" class="icons"><img src="assets/linkedin.png" alt=""></a>
+                       <a href="https://twitter.com/Josiah_dev" class="icons"><img src="assets/twitter.png" alt=""></a>
                    </div>
                </div>
                <div class="col-md-4"></div>
