Modification of the Skills set

--- a/index.htm
+++ b/index.htm
@@ -103,13 +103,13 @@
                <div class="col-md-4">
                    <h4 class="do-center p-3">Mobile Development</h4>
                    <p class="do-center">
-                        Android (Native) <br> Dart / Flutter
+                        Android (Native) <br> IOS & Android (Flutter)
                    </p>
                </div>
                <div class="col-md-4">
                    <h4 class="do-center p-3">Web Development</h4>
                    <p class="do-center">
-                       HTML / CSS <br> JQuery / Javascript <br> PHP
+                       HTML | CSS <br> JQuery | Javascript <br> PHP | MySQL
                    </p>
                </div>
            </div>
