Work added in the Portifolio

--- a/index.htm
+++ b/index.htm
@@ -130,12 +130,12 @@
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/13c06b5b4701c8afceb24def11ecfe37.gif" alt="">
+                        <img class="card-img" src="media/Vegertables.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
-                            <h5 class="card-title" style="color: #fff">Cereal Shop (E-cemmerce)</h5>
-                            <p class="card-text" style="color: #fff">Prototyping in Pinterest</p>
-                            <button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button>
+                            <h5 class="card-title" style="color: #fff">E-commerce UI Design</h5>
+                            <p class="card-text" style="color: #fff">Prototyping in Dribbble</p>
+                            <a href="https://dribbble.com/shots/13831676-UI-Design-For-Gergetables?utm_source=Clipboard_Shot&utm_campaign=josiah18&utm_content=UI%20Design%20For%20Gergetables&utm_medium=Social_Share"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
@@ -154,12 +154,12 @@
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/48012e66c6603db2fb553a9393565cca.jpg" alt="">
+                        <img class="card-img" src="media/security.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
-                            <h5 class="card-title" style="color: #fff">FinTech App (Banking)</h5>
+                            <h5 class="card-title" style="color: #fff">Banking app (Fintech) UI Design</h5>
                             <p class="card-text" style="color: #fff">Prototyping in Dribbble</p>
-                            <button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button>
+                            <a href="https://dribbble.com/shots/10989487-Security-Feature?utm_source=Clipboard_Shot&utm_campaign=josiah18&utm_content=Security%20Feature&utm_medium=Social_Share"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
