--- a/index.htm
+++ b/index.htm
@@ -166,12 +166,12 @@
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/453e24ce3ffd3d65988bb8026c54281e (1).png" alt="">
+                        <img class="card-img" src="media/Linux App.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
-                            <h5 class="card-title" style="color: #fff">Deliver app (Map View)</h5>
-                            <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                            <button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button>
+                            <h5 class="card-title" style="color: #fff">Android application (Linux Learning app)</h5>
+                            <p class="card-text" style="color: #fff">Source Github</p>
+                            <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
