--- a/index.htm
+++ b/index.htm
@@ -171,7 +171,7 @@
                             <div class=" p-3">
                             <h5 class="card-title" style="color: #fff">Android application (Linux Learning app)</h5>
                             <p class="card-text" style="color: #fff">Source Github</p>
-                            <a href="#"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                            <a href="https://github.com/Josiahmpokera/UCC-Linux-Study-app-"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
