lottie animation added

--- a/index.htm
+++ b/index.htm
@@ -60,12 +60,7 @@
           <div class="row pt-5">
               <div class="col-md-4"></div>
               <div class="col-md-4">
-                  <div class="card" style="border-radius: 1px; background-color: rgb(1, 70, 66);">
-                      <div class="card-body">
-                          <h5 class="card-title" style="color: white; text-align:center; font-family: roboto;">Project Finished</h5>
-                          <p class="card-text" style="text-align: center; color: rgb(175, 175, 175)">Andorid 2 | Web 12 | UI Design 23 Projects</p>
-                      </div>
-                  </div>
+                  <p style="text-align: center;"><img src="./assets/code.gif" alt=""></p>
               </div>
               <div class="col-md-4"></div>
           </div>
