Some items removed Resume removed

--- a/index.htm
+++ b/index.htm
@@ -51,7 +51,7 @@
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
-                       <p style="text-align: center;"> <a href="cv.pdf"><button class="btn btn-danger align-content-center" style="border-radius: 45px;"> Download CV</button></a> </p>
+                       <p style="text-align: center;"> <a href="https://github.com/Josiahmpokera"><button class="btn btn-dark align-content-center" style="border-radius: 45px;"> Github Account github </button></a> </p>
                     </div>
                     <div class="col-md-4"></div>
                 </div>
