--- a/index.htm
+++ b/index.htm
@@ -44,11 +44,11 @@
     <!--make it angain make it again (: (|))-->
     <div id="particles" class="container-fluid mt-5" style="background-color: rgb(2, 21, 24); height: 100vh">
         <div class="container pt-xl-5">
-          <div class="row">
+          <div class="row mt-5">
               <div class="col-md-12 pt-5">
-                <h2 style="color: white; font-family: roboto; text-align:center; font-size: 70px">Joh <span style="font-weight: 200;">Developer</span></h2>
+                <h2 style="color: white; font-family: roboto; text-align:center; font-size: 75px">Joh <span style="font-weight: 200;">Developer</span></h2>
                 <p style="text-align:center; font-size: 20px; color: rgb(86, 87, 86)">Full stack Developer | UI / UX Designer</p>
-                <p style="text-align: center;">Located in Dar es salaam, Tanzania</p>
+                <p style="text-align: center; color: rgb(15, 127, 106);">Located in Dar es salaam, Tanzania</p>
                 <div class="row">
                     <div class="col-md-4"></div>
                     <div class="col-md-4">
@@ -76,10 +76,10 @@
             <div class="row">
                 <div class="col-md-2"></div>
                 <div class="col-md-8">
-                    <p style="text-align:center; line-height: 30px;">A'm Full stack Developer focused in Mobile Development 
+                    <p style="text-align:center; line-height: 30px;"> My Name is Josia, I a'm Full stack Developer focused in Mobile Development 
                         and Web Development and also i have IU / UX Design skills in my belt. Am tying 
                         my best to make sure my customers get the best product from me. In Technology 
-                        i like to keep myself up to date with the latest technology used now.</p>
+                        i like to keep myself up to date with latest technology used now.</p>
                 </div>
                 <div class="col-md-2"></div>
             </div>
@@ -91,7 +91,7 @@
                <div class="col-md-4">
                    <h4 class="do-center p-3">UI / UX Designer</h4>
                    <p class="do-center">
-                       User Interface Design <br> Prototyping <br> Wireframe <br> User Experience Thinking
+                       User Interface Design <br> Prototyping <br> Wireframe <br> User Experience Thinking | Adobe XD | Figma
                    </p>
                </div>
                <div class="col-md-4">
@@ -103,7 +103,7 @@
                <div class="col-md-4">
                    <h4 class="do-center p-3">Web Development</h4>
                    <p class="do-center">
-                       HTML | CSS <br> JQuery | Javascript <br> PHP | MySQL
+                       HTML | CSS <br> JQuery | Tailwind | Javascript <br> React | Angular | Node | Laravel
                    </p>
                </div>
            </div>
@@ -114,24 +114,24 @@
            <div class="row">
                <div class="col-md-4 mt-3">
                    <div class="card">
-                       <img class="card-img" src="media/teachme_kids.png" alt="">
+                       <img class="card-img" src="media/teachme.png" alt="">
                        <div class="card-img-overlay main-card">
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">TeachMe Kids (Education)</h5>
                         <p class="card-text" style="color: #fff">Source Google Playstore</p>
-                        <a href="https://play.google.com/store/apps/details?id=com.feedme.flutter_one"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                        <a target="_blank" href="https://play.google.com/store/apps/details?id=com.feedme.flutter_one"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/Vegertables.png" alt="">
+                        <img class="card-img" src="media/ths.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
-                            <h5 class="card-title" style="color: #fff">E-commerce UI Design</h5>
-                            <p class="card-text" style="color: #fff">Prototyping in Dribbble</p>
-                            <a href="https://dribbble.com/shots/13831676-UI-Design-For-Gergetables?utm_source=Clipboard_Shot&utm_campaign=josiah18&utm_content=UI%20Design%20For%20Gergetables&utm_medium=Social_Share"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                            <h5 class="card-title" style="color: #fff">THS Conference App</h5>
+                            <p class="card-text" style="color: #fff">Source Google Playstore</p>
+                            <a target="_blank" href="https://play.google.com/store/apps/details?id=com.ths.conference&hl=en&gl=US"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
@@ -139,35 +139,36 @@
                <div class="col-md-4 mt-3">
                    <div class="card">
                        <img class="card-img" src="media/CoronaInfo.png" alt="">
+                       
                        <div class="card-img-overlay main-card">
                         <div class=" p-3">
                         <h5 class="card-title" style="color: #fff">CoronaInfo Mobile Application</h5>
                         <p class="card-text" style="color: #fff">Source Github acocunt</p>
-                        <a href="https://github.com/Josiahmpokera/Coronainfo"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                        <a target="_blank" href="https://github.com/Josiahmpokera/Coronainfo"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                         </div>
                     </div>
                    </div>
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/security.png" alt="">
+                        <img class="card-img" src="media/case.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
                             <h5 class="card-title" style="color: #fff">Banking app (Fintech) UI Design</h5>
                             <p class="card-text" style="color: #fff">Prototyping in Dribbble</p>
-                            <a href="https://dribbble.com/shots/10989487-Security-Feature?utm_source=Clipboard_Shot&utm_campaign=josiah18&utm_content=Security%20Feature&utm_medium=Social_Share"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                            <a target="_blank" href="https://dribbble.com/shots/10989487-Security-Feature?utm_source=Clipboard_Shot&utm_campaign=josiah18&utm_content=Security%20Feature&utm_medium=Social_Share"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
                </div>
                <div class="col-md-4 mt-3">
                     <div class="card">
-                        <img class="card-img" src="media/Linux App.png" alt="">
+                        <img class="card-img" src="media/linux.png" alt="">
                         <div class="card-img-overlay main-card">
                             <div class=" p-3">
                             <h5 class="card-title" style="color: #fff">Android application (Linux Learning app)</h5>
                             <p class="card-text" style="color: #fff">Source Github</p>
-                            <a href="https://github.com/Josiahmpokera/UCC-Linux-Study-app-"><button class="btn btn-light" style="border-radius: 1px; background-color: red; color: #fff">View Project</button></a>
+                            <a target="_blank" href="https://github.com/Josiahmpokera/UCC-Linux-Study-app-"><button class="btn btn-light" style="border-radius: 1px; background-color: black; color: #fff">View Project</button></a>
                             </div>
                         </div>
                     </div>
@@ -221,7 +222,7 @@
 
     <!---Footer end ; ) not am at 07:10 AM Morning no sleep-->
     <div class="footer p-2 mt-5" style="background-color: #000">
-        <p style="text-align: center; color: white">Copyright © 2022 All rights reserved</p>
+        <p style="text-align: center; color: white">Copyright © 2023 All rights reserved</p>
     </div>
     <script src="function.js">//Handles the mform functions in the form here</script>
     <script src="./node_modules/popper.js/src/index.js"></script>
